# Matrix

./: Buf.h  CMakeLists.txt  Matrix.h  Matrix_random.cpp  main.cpp  tests.cpp  tests.h
tests/: CMakeLists.txt  test_det1.txt  test_det1_ans.txt  test_det2.txt  test_det2_ans.txt  test_det3.txt  test_det3_ans.txt  test_det4.txt
tests/gtests/: test_det4_ans.txt
